--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product</title>
+    <title>{{ pageTitle }}</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
@@ -21,12 +21,12 @@
     </header>
 
     <main>
-        <h1>My Products</h1>
-        <p>List of all the products...</p>
-        <!-- <div class="grid">
+        {{#if hasProducts}}
+         <div class="grid">
+             {{#each prods}}
             <article class="card product-item">
                 <header class="card__header">
-                    <h1 class="product__title">Great Book</h1>
+                    <h1 class="product__title">{{ this.title }}</h1>
                 </header>
                 <div class="card__image">
                     <img src="https://abdulsalamchaudhary.info/wp-content/uploads/2019/07/books-521812297-1024x768.jpg" alt="A Book">
@@ -39,7 +39,11 @@
                     <button class="btn">Add to Cart</button>
                 </div>
             </article>
-        </div> -->
+            {{/each}}
+        </div>
+        {{else}}
+        <h1>No Products Found!</h1>
+        {{/if}}
     </main>
 </body>
 
