--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,8 +1,14 @@
 <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
+            <!-- user -->
             <li class="main-header__item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
+            <li class="main-header__item"><a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a></li>
+            <li class="main-header__item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
+
+            <!-- Cart -->
             <li class="main-header__item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
+            <li class="main-header__item"><a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Products</a></li>
         </ul>
     </nav>
-</header>
+    </headers>
