--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -4,10 +4,11 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for(let product of prods) { %>
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
@@ -26,7 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <form action="/add-to-cart" method="POST">
+                                        <button class="btn">Add to Cart</button>
+                                    </form>
                                 </div>
                             </article>
                             <% } %>
