--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,9 +64,19 @@ form {
     color: white;
 }
 
+.main-header__item button {
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    color: white;
+}
+
 .main-header__item a:hover,
+.main-header__item button:hover,
 .main-header__item a:active,
-.main-header__item a.active {
+.main-header__item button:active,
+.main-header__item a.active .main-header__item button.active {
+    cursor: pointer;
     color: #ffeb3b;
 }
 
