--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,6 +17,7 @@
                                 </h2>
                                 <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= p.id %>" name="productId">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                     <button class="btn danger" type="submit">Delete</button>
                                 </form>
                             </li>
