--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,12 +13,13 @@
                                 <li class="orders__item">
                                     <h1>Order - #
                                         <%= order.id %>
+                                            - <a href="/orders/<%= order.id %>">Invoice</a>
                                     </h1>
                                     <ul class="orders__products">
                                         <% order.products.forEach(product => { %>
                                             <li class="orders__products-item">
                                                 <%= product.title %> (
-                                                    <%= product.orderItem.quantity %>) - <a href="/orders/<%= order.id %>">Invoice</a>
+                                                    <%= product.orderItem.quantity %>)
                                             </li>
                                             <% }); %>
                                     </ul>
