--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,7 +42,7 @@ form {
 .main-header__nav {
     height: 100%;
     width: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: space-between;
 }
@@ -59,24 +59,21 @@ form {
     padding: 0;
 }
 
-.main-header__item a {
+.main-header__item a,
+.main-header__item button {
+    font: inherit;
+    background: transparent;
+    border: none;
     text-decoration: none;
     color: white;
-}
-
-.main-header__item button {
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    color: white;
+    cursor: pointer;
 }
 
 .main-header__item a:hover,
-.main-header__item button:hover,
 .main-header__item a:active,
-.main-header__item button:active,
-.main-header__item a.active .main-header__item button.active {
-    cursor: pointer;
+.main-header__item a.active,
+.main-header__item button:hover,
+.main-header__item button:active {
     color: #ffeb3b;
 }
 
@@ -111,16 +108,23 @@ form {
     padding: 0;
 }
 
-.mobile-nav__item a {
+.mobile-nav__item a,
+.mobile-nav__item button {
+    font: inherit;
     text-decoration: none;
     color: black;
     font-size: 1.5rem;
     padding: 0.5rem 2rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
-.mobile-nav__item a.active {
+.mobile-nav__item a.active,
+.mobile-nav__item button:hover,
+.mobile-nav__item button:active {
     background: #00695c;
     color: white;
     border-radius: 3px;
@@ -182,10 +186,13 @@ form {
 
 .card__image {
     width: 100%;
+    height: 10rem;
+    text-align: center;
 }
 
 .card__image img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .card__actions {
@@ -216,11 +223,22 @@ form {
     color: white;
 }
 
+.btn.danger {
+    color: red;
+    border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+    background: red;
+    color: white;
+}
+
 .user-message {
     margin: auto;
     width: 90%;
     border: 1px solid #4771fa;
-    padding: 1rem;
+    padding: 0.5rem;
     border-radius: 3px;
     background: #b9c9ff;
     text-align: center;
@@ -228,7 +246,7 @@ form {
 
 .user-message--error {
     border-color: red;
-    background: #ffb0b0;
+    background: rgb(255, 176, 176);
     color: red;
 }
 
@@ -248,7 +266,7 @@ form {
 .pagination a:hover,
 .pagination a:active,
 .pagination a.active {
-    background-color: #00695c;
+    background: #00695c;
     color: white;
 }
 
