--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -33,8 +33,9 @@
                             </article>
                             <% } %>
                     </div>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                        <% } %>
+                    <%- include('../includes/pagination.ejs', {currentPage: currentPage, previousPage: previousPage, hasPreviousPage: hasPreviousPage, nextPage: nextPage, hasNextPage: hasNextPage, lastPage: lastPage}) %>
+                        <% } else { %>
+                            <h1>No Products Found!</h1>
+                            <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
