payment is functional

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -23,5 +23,8 @@
                         <%= totalSum %>
                     </h2>
                 </div>
+                <div class="centered">
+                    <a href="/shop/postCheckout" class="btn">ORDER</a>
+                </div>
             </main>
             <%- include('../includes/end.ejs') %>
